fix spacing

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -250,7 +250,7 @@ fieldset {
     transition-delay: 0.2s;
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
-    background-color: hsla(0, 0%, 95%, 0.97);
+    background-color: hsla(0, 0%, 95%, 1);
     transition: opacity 0.3s,
       -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
     transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1), opacity 0.3s;
